# revpi-hat-eeprom

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  RevPi-HAT-EEPROM-Format.md  example.json
.github/workflows/: ci.yaml
.reuse/: dep5
docs/: JSON-Format.md  RevPi-HAT-EEPROM-Format.md  eep.schema  eep.schema.license  example.json
revpi-eep/: Cargo.toml
revpi-eep/src/: gpio.rs  lib.rs
revpi-hat-eep/: Cargo.toml
revpi-hat-eep/src/: error.rs  gpio.rs  lib.rs
rpi-eep/: Cargo.toml
rpi-eep/examples/: eepmake.rs
rpi-eep/src/: gpio_map.rs  lib.rs
rpi-hat-eep/: Cargo.toml
rpi-hat-eep/examples/: eepmake.rs
rpi-hat-eep/src/: gpio_map.rs  lib.rs
src/: gpio.rs  main.rs  revpi_hat_eeprom.rs  validate.rs
