[package]
name = "revpi-hat-eeprom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.0", feature = ["v4"] }
md5 = { version = "0.7" }
