# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: Copyright KUNBUS GmbH

#test

[package]
name = "revpi-eep"
version = "0.1.0"
edition = "2021"
description = "Tool to create image files compatible to the RevPi-HAT-EEPROM format"
repository = "https://github.com/RevolutionPi/revpi-hat-eeprom"
license = "GPL-2.0-or-later"
authors = ["KUNBUS GmbH <support@kunbus.com>"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
eui48 = { version = "1.1", features = ["serde"] }
md5 = "0.7"
num = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.1", features = ["serde"] }
rpi-eep = { path = "../rpi-eep" }
