# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: Copyright KUNBUS GmbH

[package]
name = "revpi-hat-eep"
version = "1.0.0"
edition = "2021"
description = "Tool to create image files compatible to the RevPi-HAT-EEPROM format"
repository = "https://github.com/RevolutionPi/revpi-hat-eeprom"
license = "GPL-2.0-or-later"
authors = ["KUNBUS GmbH <support@kunbus.com>"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
macaddr = { version = "1.0", features = ["serde"] }
md5 = "0.7"
num = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["serde"] }
rpi-hat-eep = { path = "../rpi-hat-eep" }
